Service bugfixes